# believex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  KNN_model.ipynb  KNN_onnx.ipynb  README.md  index.html
.github/workflows/: rust.yml
css/: fonts.css  style.css
dataset/: _howtomerge.ipynb  observations_2h.csv  observations_5d.csv  observations_before.csv  patients.csv  working.csv
dataset/cleaned/: observations_2h.csv  observations_5d.csv  observations_before.csv  patients.csv
front/: 404.html  index.html
front/css/: style.css
front/js/: main.js
js/: main.js
modeling/: KNN_onnx_5d_HF.ipynb  knn_girls.onnx  merge.ipynb
models/: KNN_onnx.ipynb  KNN_onnx_2h_HF.ipynb  KNN_onnx_2h_LF.ipynb  KNN_onnx_5d_LF.ipynb  knn_boys.onnx  knn_female_adults (1).onnx  knn_female_adults_hf_2h.onnx  knn_female_adults_hf_5d.onnx  knn_female_adults_lf_2h.onnx  knn_female_adults_lf_5d.onnx  knn_female_child.onnx  knn_female_child_hf_2h.onnx  knn_female_child_hf_5d.onnx  knn_female_child_lf_2h.onnx  knn_female_child_lf_5d.onnx  knn_male_adults.onnx  knn_male_adults_hf_2h.onnx  knn_male_adults_hf_5d.onnx  knn_male_adults_lf_2h.onnx  knn_male_adults_lf_5d.onnx  knn_male_child.onnx  knn_male_child_hf_2h.onnx  knn_male_child_hf_5d.onnx  knn_male_child_lf_2h.onnx  knn_male_child_lf_5d.onnx  knn_men.onnx  knn_merged.onnx  knn_women.onnx  sample_model.onnx
src/: appstate.rs  handlers.rs  lib.rs  main.rs  ort_model.rs  queries.rs  serde_structs.rs  url_queries.rs
